# api-flask-hashtag-pagamentos

./: .env  .env.example  .gitignore  README.md  app.py  config.py  extensions.py  pyproject.toml  requirements.txt  run.py
controlepagamentos/: __init__.py  forms.py  helpers.py  models.py  views.py
controlepagamentos/static/css/: style.css
controlepagamentos/templates/: base.html  cadastro.html  consultas.html  login.html  navbar.html
migrations/versions/: 6371be67cbd3_.py  b5bb379def03_.py  f864d809b3e3_initial_migrate.py
