[tool.poetry]
name = "api-hashtag-pagamentos"
version = "0.1.0"
description = ""
authors = ["michelebswm <michele.fenix.17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-restful = "^0.3.10"
flask-dotenv = "^0.1.2"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
