[tool.poetry]
name = "api-hashtag-pagamentos"
version = "0.1.0"
description = ""
authors = ["michelebswm <michele.fenix.17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-restful = "^0.3.10"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
python-dotenv = "^1.0.1"
flask-bcrypt = "^1.0.1"
psycopg2 = "^2.9.9"
flask-wtf = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
